# CostDashboard

./: .gitignore  .replit  README.md  app.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_wal-costdash-eu-t-1-test.yml
app/: config.py  ingest.py  main.py  models.py  savings.py
data/: AWS_Merged.costs.xlsx  Azure_6_Month_Cost_Estimate.xlsx  Azure_Resource_Subscription_Cost_Estimate.xlsx  GCP_Resource_Project_Cost_Grouped.xlsx
frontend/src/: App.js
